--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -1,39 +1,50 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: aaleixo- <aaleixo-@student.42lisboa.com    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/05/06 13:42:33 by aaleixo-          #+#    #+#              #
+#    Updated: 2024/05/06 13:42:38 by aaleixo-         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = libft.a
-EXECUTABLE = a.out
-
-SRC = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c\
-ft_strlen.c ft_memset.c ft_memcpy.c ft_memmove.c ft_bzero.c ft_memchr.c\
-ft_memcmp.c ft_strlen.c ft_strlcpy.c ft_strlcat.c ft_strchr.c ft_strrchr.c\
-ft_strncmp.c ft_strnstr.c ft_atoi.c ft_toupper.c ft_tolower.c\
-ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c\
-ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c\
-ft_putendl_fd.c ft_putnbr_fd.c main.c
-
-SRC_BONUS = ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c\
-ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c ft_lstsize.c
-
-OBJS = $(SRC:.c=.o)
-OBJSBONUS = $(SRC_BONUS:.c=.o)
+SOURCES = \
+	ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
+	ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
+	ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c \
+	ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c ft_atoi.c \
+	ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c \
+	ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
+	ft_putendl_fd.c ft_putnbr_fd.c
+BSOURCES = \
+	ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c \
+	ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
+OBJECTS = $(SOURCES:.c=.o)
+BOBJECTS = $(BSOURCES:.c=.o)
 
 CC = cc
-RM = rm -f
 CFLAGS = -Wall -Wextra -Werror
 
-all: $(EXECUTABLE)
+all: $(NAME)
 
-$(EXECUTABLE): $(NAME) main.o
-	$(CC) $(CFLAGS) main.o -L. -lft -o $(EXECUTABLE)
+$(NAME): $(OBJECTS)
+	$(AR) -r $@ $?
 
-$(NAME): $(OBJS)
-	ar rcs $(NAME) $(OBJS)
+bonus: $(OBJECTS) $(BOBJECTS)
+	$(AR) -r $(NAME) $?
+
+%.o: %.c
+	$(CC) -c $(CFLAGS) $?
 
 clean:
-	$(RM) $(OBJS) main.o
+	rm -f $(OBJECTS) $(BOBJECTS)
 
 fclean: clean
-	$(RM) $(NAME) $(EXECUTABLE)
+	rm -f $(NAME)
 
 re: fclean all
 
-bonus:
-
+.PHONY: all bonus clean fclean re
